--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <!-- ***** Contact Form Start ***** -->
                 <div class="col-lg-8 col-md-6 col-sm-12">
                     <div class="contact-form">
-                        <form name="contact" id="contact" action="" method="post">
+                        <form name="contact" id="contact" action="" method="">
                             <div class="row">
                                 <div class="col-lg-6 col-md-12 col-sm-12">
                                     <fieldset>
